[package]
name = "logrok"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[[bin]]
name = "logrok"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
hclog = { git = "ssh://git@github.com/BobBinaryBuilder/hclog.git", features = ["hclog_macros"] }
hclog_macros = { git = "ssh://git@github.com/BobBinaryBuilder/hclog.git" }
num_cpus = "1.16.0"
regex = "1.11.0"
bitvec = "1.0.1"
lru = "0.12.5"
memchr = "2.7.4"
