[package]
name = "logrok"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Terminal-based logfile viewer that cuts to the chase."
repository = "https://github.com/sensille/logrok"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]
keywords = ["logfile", "viewer", "cli", "filter", "coloring"]

[profile.dev]
opt-level = 3

[[bin]]
name = "lg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
num_cpus = "1.16.0"
regex = "1.11.0"
bitvec = "1.0.1"
lru = "0.12.5"
memchr = "2.7.4"
hclog = { version = "0.1.0", features = ["hclog_macros", "derive"] }
hclog_macros = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
md5 = "0.8.0"
